--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -4,9 +4,9 @@
 [general]
 
 project     = Typo3 Custom PHP Include
-version     = 1.0.0
-release     = <release>
-copyright   = <copyright>
+release     = 1.0.0
+copyright   = 2023
+state = stable
 
 [html_theme_options]
 
