[TASK] Update-Wizard for Liste-Type Migration

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -9,3 +9,10 @@ services:
 
   CodingFreaks\CfPhpinclude\Controller\PhpFrontendController:
     public: true
+
+  CodingFreaks\CfPhpinclude\Updates\PluginListToCTypeUpdateWizard:
+    class: CodingFreaks\CfPhpinclude\Updates\PluginListToCTypeUpdateWizard
+    autowire: true
+    public: true
+    tags:
+      - name: typo3.install.updatewizard
