--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     ],
     "license": "GPL-2.0-or-later",
     "require": {
-        "typo3/cms-core": "^12.4 || ^13.0",
-        "linawolf/list-type-migration": "^1.0"
+        "typo3/cms-core": "^12.4 || ^13.0 || ^14.0"
     },
     "require-dev": {
         "typo3/testing-framework": "^6.9.0"
